# fpf-agentic-thinking-map

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REFLECTIONS.md  SHA256SUMS  SPEC_RUN_PROPOSALS_TRIPLE_TAX_LANGUAGE.md  TRIPLE_TAX_CALCULUS.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
bench/: README.md  RESULTS.md  ablation_harness.py  ablation_harness_taskae.py  ablation_harness_taskbe.py  ablation_harness_taskc.py  ablation_harness_taskd.py  ablation_harness_taskde.py  ablation_harness_taske.py  raw_results.json  raw_results_taskae.json  raw_results_taskbe.json  raw_results_taskc.json  raw_results_taskd.json  raw_results_taskde.json  raw_results_taske.json  requirements.txt
dev_mcp/: ARCHITECTURE.md  README.md  advisory_detectors.py  compliance_inspector.py  requirements.txt  server.py  test_server.py
docs/: ARCHITECTURE.md  DECISIONS_REJECTIONS_ADOPTIONS.md  RELATED_PROJECTS.md  VERSION_TRACKER.md  index.html
docs/deep/: ADOPTED_IGNITION_LOCK.md  ADOPTED_MOVE_INTENT.md  ADOPTED_PENDING_INPUT_AWAIT.md  ADOPTED_PROVENANCE.md  ADVISORIES.md  DESIGN_MOVE_INTENT.md  DESIGN_TRAVERSAL_CHECKPOINT.md  EXPANDED_MOVE_INTENT.md  EXPANDED_PENDING_INPUT_AWAIT.md  EXPANDED_PROVENANCE.md  FPF_AUDIT_RESPONSE.md  FPF_SCOPE_AUDIT_LOG.md  IGNITION_LOCK_WIND_TUNNEL.md  README.md  REFLECTIONS.md  REJECTED_A22_CGUS_MODEL_SELF_ADMISSIBILITY.md  REJECTED_C32_CANDIDATE_SYNTHESIS.md  REJECTED_NQD_OEE_CULTURAL_EVOLUTION.md  REJECTED_ORIENTATION_VIEW_PROJECTION.md  REJECTED_RUNTIME_AFFORDANCE_PROJECTION.md  RELATED_WORK_GOFLOW_FPF_SKILL.md  RELATED_WORK_MILTONIAN_PRINCIPLES.md  SOURCES.md  TRIPLE_TAX_CALCULUS.md  WHY_THIS_EXISTS.md
docs/demos/: index.html  single-trace.html  three-runs.html
fpf_thinking_map/: ADVISORIES.md  FPF_AUDIT_RESPONSE.md  FPF_FLOOR_MAP.md  FPF_SOURCE_TO_CODE_RELATION_AUDIT.md  README.md  REJECTED_F17_UNIFIED_TERM_SHEET.md  SOURCES.md  WHY_THIS_EXISTS.md  __init__.py  authorization.py  example_logic_scenario.py  example_scenario.py  examples.py  guards.py  logic.py  move_intent.py  pending_input.py  primitives.py  state.py  traversal.py  verify.py
scripts/: requirements-triple-tax.txt  triple_tax_calculus.py
