[project]
name = "fpf-thinking-map"
version = "1.4.19"
description = "Agentic thinking map for bounded LLM traversal, with TTL evidence decay, deterministic guards, and propositional logic. Compiled from FPF (First Principles Framework)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "prichindel.com", email = "igareosh@igareosh.com"},
]
keywords = [
    "agentic", "thinking-map", "llm", "reasoning",
    "propositional-logic", "evidence-decay", "ttl",
    "guards", "gates", "semantic-map", "fpf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/igareosh/fpf-agentic-thinking-map"
Repository = "https://github.com/igareosh/fpf-agentic-thinking-map"
Documentation = "https://github.com/igareosh/fpf-agentic-thinking-map#readme"
Issues = "https://github.com/igareosh/fpf-agentic-thinking-map/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fpf_thinking_map*"]

[tool.setuptools.package-data]
fpf_thinking_map = ["py.typed", "*.md"]
